--- a/add_person.html
+++ b/add_person.html
@@ -51,16 +51,22 @@
       <div class="row">
         <h2 class="mt-3">Who are you Listing</h2>
         <p class="fw-light">Being nice goes a long way</p>
+
         <!-- Add Image Side (Left) -->
-        <div class="col-md-5 me-2 image d-flex text-center">
+        <div class="col-md-4 image text-center">
           <div class="image-drawer my-3">
-            <img src="./icons/add_image.png" height="80px" width="80px"><br>
-            <button class="btn btn-secondary mt-2">Add Photos</button>
+            <img src="./icons/add_image.png" height="80px" width="80px" class="mb-2">
+
+            <!-- For Uploading Image -->
+            <input id="upload" type="file" multiple="multiple" accept="image/jpeg, image/png, image/jpg">
+            <hr>
+            <!-- Display Image Uploaded -->
+            <output id="result">
           </div>
         </div>
 
         <!-- Input Side (Right)-->
-        <div class="col-md-6 input">
+        <div class="col-md-8 input">
           <form action="">
             <!-- Person Name -->
             <div class="mb-3 mt-3">
@@ -161,6 +167,30 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
+    <!-- For uploading Image-->
+    <script>
+      document.querySelector("#upload").addEventListener("change", (e) => { 
+      if (window.File && window.FileReader && window.FileList && window.Blob) {
+        const files = e.target.files;
+        const output = document.querySelector("#result");
+        output.innerHTML = "";
+        for (let i = 0; i < files.length; i++) {
+          if (!files[i].type.match("image")) continue;
+            const picReader = new FileReader();
+            picReader.addEventListener("load", function (event) {
+              const picFile = event.target;
+              const div = document.createElement("div");
+              div.innerHTML = `<img class="thumbnail mb-3" src="${picFile.result}" title="${picFile.name}"/>`;
+              output.appendChild(div);
+            });
+            picReader.readAsDataURL(files[i]);
+          }
+      } else {
+        alert("Your browser does not support File API");
+      }
+    });
+    </script>
   </body>
   <style>
     .image {
@@ -171,6 +201,14 @@
     }
     .image-drawer {
       margin: auto;
+    }
+    #result{
+      padding: 10px 0;
+      display:inline-block
+    }
+    .thumbnail {
+      max-width: 100%;
+      max-height: 100%;
     }
   </style>
 </html>
