--- a/listing.html
+++ b/listing.html
@@ -96,6 +96,38 @@
 
     <!-- Start of Second Section-->
     <div class="container-fluid">
+
+      <!-- Update Last Seen Location Pop Up Box (Hidden By Default) -->
+      <div class='update' id='update'>
+        <h2 class="my-3 text-center">Update Last Seen Location</h2>
+
+        <!-- Integrate Map API here -->
+        <div class='my-5' id="map">
+          <label for="map" class="form-label">Update Location</label>
+        </div>
+
+        <!-- Custom Notes -->
+        <div class="mb-4">
+          <label for="notes" class="form-label">Custom Notes</label>
+          <textarea class="form-control" id="notes" rows="5"></textarea>
+        </div>
+
+        <!-- Add Image  -->
+        <div class="mb-2">
+          <label for="upload" class="form-label">Upload Image</label><br>
+          <!-- For Uploading Image -->
+          <input id="upload" type="file" multiple="multiple" accept="image/jpeg, image/png, image/jpg">
+          <br>
+          <!-- Display Image Uploaded -->
+          <output id="result">
+        </div>
+
+        <div class="text-center">
+          <button class="btn btn-primary" type="submit" name="submit">Update</button>
+          <button class="btn btn-primary" type="submit" name="cancel" onclick="closeUpdate()">Cancel</button>
+        </div>
+      </div>
+
       <!-- Section for Listing Content -->
       <div class="listing">
       
@@ -128,7 +160,7 @@
                     </div>
 
                     <div class="row">
-                      <button type="button" class="btn btn-primary">Update Last Seen</button>
+                      <button type="button" class="btn btn-primary" onclick="openUpdate()">Update Last Seen</button>
                     </div>
                     
                   </div>
@@ -211,5 +243,69 @@
 
     <!-- Java BootStrap CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
+    <script>
+      let update = document.getElementById('update')
+      let main = document.getElementById('main')
+  
+      function openUpdate() {
+        update.classList.add('show-release')
+        main.classList.add('blur')
+      }
+      function closeUpdate() {
+        update.classList.remove('show-release')
+        main.classList.remove('blur')
+      }
+
+      document.querySelector("#upload").addEventListener("change", (e) => { 
+      if (window.File && window.FileReader && window.FileList && window.Blob) {
+        const files = e.target.files;
+        const output = document.querySelector("#result");
+        output.innerHTML = "";
+        for (let i = 0; i < files.length; i++) {
+          if (!files[i].type.match("image")) continue;
+            const picReader = new FileReader();
+            picReader.addEventListener("load", function (event) {
+              const picFile = event.target;
+              const div = document.createElement("div");
+              div.innerHTML = `<img class="thumbnail mb-3" src="${picFile.result}" title="${picFile.name}"/>`;
+              output.appendChild(div);
+            });
+            picReader.readAsDataURL(files[i]);
+          }
+      } else {
+        alert("Your browser does not support File API");
+      }
+    });
+
+    </script>
   </body>
+
+  <style>
+    .update{
+      background-color: beige;
+      border-radius: 5%;
+      padding: 20px;
+      position: absolute;
+      visibility: hidden;
+      width: 50%;
+      left: 25%;
+      z-index: 1;
+    }
+    .show-release {
+      visibility: visible;
+    }
+    .blur {
+      filter: blur(5px);
+    }
+    #result{
+      padding: 10px 0;
+      display:inline-flex;
+    }
+    .thumbnail {
+      width: 100px;
+      height: 100px;
+      margin-right: 10px;
+    }
+  </style>
 </html>
