--- a/add_person.html
+++ b/add_person.html
@@ -204,11 +204,11 @@
     }
     #result{
       padding: 10px 0;
-      display:inline-block
+      display:inline-block;
     }
     .thumbnail {
-      max-width: 100%;
-      max-height: 100%;
+      width: 100px;
+      height: 100px;
     }
   </style>
 </html>
